trace_log_utf8.txt
zig : [DEBUG build_start] Build function started 
(session: A)
At line:1 char:1
+ zig build -Doptimize=Debug -freference-trace 2>&1 | 
Out-File -Encodin ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: ([DEBUG buil 
   d_st...ed (session: A):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
[DEBUG target_optimize_setup] Target and optimize 
options set (session: A)
[DEBUG build_complete] Build function completed 
successfully (session: A)
install
+- install nyon_game
   +- compile exe nyon_game Debug native 1 errors
C:\Users\donald\AppData\Roaming\Antigravity\User\globalSt
orage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.18
92+53ebfde6b\lib\std\Io\Writer.zig:1792:5: error: 
invalid format string 's' for type 'comptime_int'
    @compileError("invalid format string '" ++ fmt ++ "' 
for type '" ++ @typeName(@TypeOf(value)) ++ "'");
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    printValue__anon_58488: C:\Users\donald\AppData\Roami
ng\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\
x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Write
r.zig:1151:40
    print__anon_55309: C:\Users\donald\AppData\Roaming\An
tigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_6
4-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Writer.zig
:703:25
    bufPrint__anon_54027: C:\Users\donald\AppData\Roaming
\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x8
6_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\fmt.zig:59
9:12
    worldDataPath: src\game\sandbox.zig:650:28
    saveWorld: src\game\sandbox.zig:328:39
    deinit: src\application.zig:92:45
    main: src\main.zig:15:21
    callMain [inlined]: C:\Users\donald\AppData\Roaming\A
ntigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_
64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\start.zig:72
4:37
    callMainWithArgs [inlined]: C:\Users\donald\AppData\R
oaming\Antigravity\User\globalStorage\ziglang.vscode-zig\
zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\star
t.zig:679:20
    main: C:\Users\donald\AppData\Roaming\Antigravity\Use
r\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.1
6.0-dev.1892+53ebfde6b\lib\std\start.zig:694:28
    comptime: C:\Users\donald\AppData\Roaming\Antigravity
\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows
-0.16.0-dev.1892+53ebfde6b\lib\std\start.zig:62:30
    start: C:\Users\donald\AppData\Roaming\Antigravity\Us
er\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.
16.0-dev.1892+53ebfde6b\lib\std\std.zig:107:27
    comptime: C:\Users\donald\AppData\Roaming\Antigravity
\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows
-0.16.0-dev.1892+53ebfde6b\lib\std\std.zig:201:9
error: 1 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Ant
igravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x
86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" 
build-exe -freference-trace=256 -ODebug --dep 
raylib=raygui --dep raygui --dep zglfw --dep nyon_game 
"-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mr
aygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig"
 "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.
zig" -ODebug --dep raylib=raygui --dep raygui --dep 
zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyo
n-game\\src\\root.zig" -lc --cache-dir .zig-cache 
--global-cache-dir 
"C:\\Users\\donald\\AppData\\Local\\zig" --name 
nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roam
ing\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig
\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" 
--listen=-

install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 2 errors
src\editor\main_editor.zig:936:54: error: value of type 
'bool' ignored
                    
self.entity_to_scene_index.remove(data.entity);
                    
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
src\editor\main_editor.zig:936:54: note: all non-void 
values must be used
src\editor\main_editor.zig:936:54: note: to discard the 
value, assign it to '_'
referenced by:
    update: src\editor\main_editor.zig:274:32
    main: src\editor.zig:55:26
    callMain [inlined]: C:\Users\donald\AppData\Roaming\A
ntigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_
64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\start.zig:72
4:37
    callMainWithArgs [inlined]: C:\Users\donald\AppData\R
oaming\Antigravity\User\globalStorage\ziglang.vscode-zig\
zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\star
t.zig:679:20
    main: C:\Users\donald\AppData\Roaming\Antigravity\Use
r\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.1
6.0-dev.1892+53ebfde6b\lib\std\start.zig:694:28
    comptime: C:\Users\donald\AppData\Roaming\Antigravity
\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows
-0.16.0-dev.1892+53ebfde6b\lib\std\start.zig:62:30
    start: C:\Users\donald\AppData\Roaming\Antigravity\Us
er\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.
16.0-dev.1892+53ebfde6b\lib\std\std.zig:107:27
    comptime: C:\Users\donald\AppData\Roaming\Antigravity
\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows
-0.16.0-dev.1892+53ebfde6b\lib\std\std.zig:201:9
src\editor\main_editor_tui.zig:233:26: error: member 
function expected 1 argument(s), found 0
        defer unknown_msg.deinit();
              ~~~~~~~~~~~^~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalSt
orage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.18
92+53ebfde6b\lib\std\array_list.zig:624:13: note: 
function declared here
        pub fn deinit(self: *Self, gpa: Allocator) void {
        ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    handleInput__anon_55381: 
src\editor\main_editor_tui.zig:64:52
    handleInput: src\editor\main_editor.zig:351:48
    main: src\editor.zig:54:31
    callMain [inlined]: C:\Users\donald\AppData\Roaming\A
ntigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_
64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\start.zig:72
4:37
    callMainWithArgs [inlined]: C:\Users\donald\AppData\R
oaming\Antigravity\User\globalStorage\ziglang.vscode-zig\
zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\star
t.zig:679:20
    main: C:\Users\donald\AppData\Roaming\Antigravity\Use
r\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.1
6.0-dev.1892+53ebfde6b\lib\std\start.zig:694:28
    comptime: C:\Users\donald\AppData\Roaming\Antigravity
\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows
-0.16.0-dev.1892+53ebfde6b\lib\std\start.zig:62:30
    start: C:\Users\donald\AppData\Roaming\Antigravity\Us
er\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.
16.0-dev.1892+53ebfde6b\lib\std\std.zig:107:27
    comptime: C:\Users\donald\AppData\Roaming\Antigravity
\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows
-0.16.0-dev.1892+53ebfde6b\lib\std\std.zig:201:9
error: 2 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Ant
igravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x
86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" 
build-exe -freference-trace=256 -ODebug --dep 
raylib=raygui --dep raygui --dep zglfw --dep nyon_game 
"-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-
Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zi
g" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stu
b.zig" -ODebug --dep raylib=raygui --dep raygui --dep 
zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyo
n-game\\src\\root.zig" -lc --cache-dir .zig-cache 
--global-cache-dir 
"C:\\Users\\donald\\AppData\\Local\\zig" --name 
nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Ro
aming\\Antigravity\\User\\globalStorage\\ziglang.vscode-z
ig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\"
 --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 1 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 2 errors

error: the following build command failed with exit code 
1:
.zig-cache\o\92f2af8c2753723feeadd90abb19e800\build.exe C
:\Users\donald\AppData\Roaming\Antigravity\User\globalSto
rage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.189
2+53ebfde6b\zig.exe C:\Users\donald\AppData\Roaming\Antig
ravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-w
indows-0.16.0-dev.1892+53ebfde6b\lib 
C:\Users\donald\nyon-game .zig-cache 
C:\Users\donald\AppData\Local\zig --seed 0xfa77a028 
-Z6a22f4c6ce86ee2a -Doptimize=Debug -freference-trace
